# classification_loan_acceptance

./: 404.html  Analysis.ipynb  README.md  analysis.html  app.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.ipynb_checkpoints/: index-checkpoint.html
api_overview/: index.html
data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
docs/: analysis.html  api_overview.md  index.md
models/: gradient_boosting.joblib
notebooks/: Analysis.ipynb
notebooks/.ipynb_checkpoints/: Analysis-checkpoint.ipynb
site/: 404.html  index.html
site/api_overview/: index.html
site/search/: search_index.json
src/: config.py  load_data.py  utils.py
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
