[tool.poetry]
name = "classification-loan-acceptance"
version = "1.0.0"
description = "A classification model to identify the customers who are most likely to accept a loan offer."
authors = ["Faruk Yasar <farukyasar88@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
numpy = "1.24.3"
scikit-learn = "1.2.2"
imbalanced-learn = "0.10.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
xgboost = "^2.1.3"
joblib = "^1.4.2"
notebook = "^7.3.1"
jupyterlab = "^4.3.3"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
openpyxl = "^3.1.5"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
mkdocs = "^1.6.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
